Fix CSL layout shift when loading FA-icon in button

--- a/src/css/button.scss
+++ b/src/css/button.scss
@@ -47,4 +47,5 @@ button:focus {
 
 .btn-icon {
     margin-inline-start: .5rem;
+    min-width: 7px;
 }
